--- a/indeks.html
+++ b/indeks.html
@@ -17,5 +17,24 @@
   <h2>Hello, world!</h1>
   <h3>Hello, world!</h1>
   <h4>Hello, world!</h1>
+  
+  <div/>
+  
+<div class="circle-box">
+    </div><p>1</p></div/>
+    </div><p>2</p></div/>
+    </div><p>3</p></div/>
+</div>
+
+<footer>
+</div>
+  <div/>
+    <div/>
+      <div/>
+        <div/>
+          <div/>
+            <div/>
+        
 </body>
+
 </html>
