--- a/indeks.html
+++ b/indeks.html
@@ -34,7 +34,17 @@
         <div/>
           <div/>
             <div/>
-        
+        .circle-box{
+              background: #0000F;
+              padding: 32px;
+              display: flex;
+              gap: 16px;
+              justify-content: center;
+}
+
+
+              
 </body>
 
 </html>
+
