--- a/indeks.html
+++ b/indeks.html
@@ -1,18 +1,20 @@
+  </body>
+  </html>
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
-  <title>pierwsza strona www</title>
-  <link rel="styleheet"
-  href="style.css">
+  <meta charset="UTF-8">
+  <title>Pierwsza strona www</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <header>
     <h1>Pierwsza strona www</h1>
-  <p>Autor:<strong>Natalia Dominiak</strong></p></header>
-  
-  <div class="container"> 
+    <p>Autor: <strong>Natalia Dominiak</strong></p>
+  </header>
+
+  <div class="container">
     <div class="box">
       <h2>Wykorzystane języki</h2>
       <ul>
@@ -21,34 +23,30 @@
       </ul>
     </div>
 
+    <div class="box">
+      <h2>Strony z pomocą</h2>
+      <ol>
+        <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">w3schools.com</a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">developer.mozilla.org</a></li>
+      </ol>
+    </div>
+  </div>
 
-    
-     <p class="new-text"></p>
-     <o1></o1>
-     <div></div>
-  <h1>Hello, world!</h1>
-  <h2>Hello, world!</h1>
-  <h3>Hello, world!</h1>
-  <h4>Hello, world!</h1>
+  <div class="circle-box">
+    <div><p>1</p></div>
+    <div><p>2</p></div>
+    <div><p>3</p></div>
+  </div>
+
+  <section class="about">
+    <h2>O mnie</h2>
+    <p>Cześć! Uczę się tworzenia stron internetowych. To moja pierwsza witryna napisana w HTML i CSS.</p>
+  </section>
+
   
-  <div/>
-  
-<div class="circle-box">
-    </div><p>1</p></div/>
-    </div><p>2</p></div/>
-    </div><p>3</p></div/>
-</div>
+</body>
+</html>
 
-<footer>
-</div>
-  <div/>
-    <div/>
-      <div/>
-        <div/>
-          
-
-  </body>
-  </html>
 
 
 
